--- a/Vault/wwwroot/css/login.css
+++ b/Vault/wwwroot/css/login.css
@@ -898,3 +898,26 @@ tspan {
     -o-animation: fadein 0.4s;
     animation: fadein 0.4s;
 }
+
+.btn-close-viewer {
+    position: absolute;
+    border: 2px solid #3c3c3c;
+    box-shadow: 0 1px 1px rgba(0,0,0,.15);
+    margin-left: 10px;
+    height: 35px;
+    width: 35px;
+    padding: 0;
+    border-radius: 4px;
+    top: 15px;
+    right: 65px;
+    cursor: pointer;
+    background: url(../images/x.svg);
+    background-size: 20px;
+    background-color: #1b1b1b;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.btn-close-viewer:hover {
+    background-color: #2b2b2b;
+}
