--- a/Vault/wwwroot/css/share.css
+++ b/Vault/wwwroot/css/share.css
@@ -126,7 +126,6 @@ input[type=submit]:hover {
     max-width: 80%;
     max-height: 80%;
     box-shadow: 6px 3px 20px 3px #00000091;
-    z-index: -99 !important;
     -webkit-animation: fadein 0.8s;
     -moz-animation: fadein 0.8s;
     -ms-animation: fadein 0.8s;
@@ -382,11 +381,13 @@ input[type=submit]:hover {
 
 .file-viewer-topbar {
     position: absolute;
+    font-family: sans-serif;
     left: 10px;
     top: 0;
     color: #c5c5c5;
     overflow: hidden;
     height: 50px;
+    z-index: -20;
 }
 
 .file-viewer-icon {
@@ -532,4 +533,16 @@ input[type=submit]:hover {
     margin-top: -8px;
     color: #6f6f6ff2;
     float: right;
+}
+
+
+.pdf-viewer {
+    position: absolute;
+    left: 0;
+    top: 15px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    max-height: none;
+    max-width: none;
 }
