--- a/Vault/wwwroot/css/usercp.css
+++ b/Vault/wwwroot/css/usercp.css
@@ -1048,6 +1048,7 @@ progress::-moz-progress-bar {
     position: absolute;
     left: 10px;
     top: 0;
+    z-index: -20;
     color: #c5c5c5;
     overflow: hidden;
     height: 50px;
@@ -1099,6 +1100,29 @@ progress::-moz-progress-bar {
     background-color: #2b2b2b;
 }
 
+.btn-close-viewer {
+    position: absolute;
+    border: 2px solid #3c3c3c;
+    box-shadow: 0 1px 1px rgba(0,0,0,.15);
+    margin-left: 10px;
+    height: 35px;
+    width: 35px;
+    padding: 0;
+    border-radius: 4px;
+    top: 15px;
+    right: 65px;
+    cursor: pointer;
+    background: url(../images/x.svg);
+    background-size: 20px;
+    background-color: #1b1b1b;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.btn-close-viewer:hover {
+    background-color: #2b2b2b;
+}
+
 input[type=submit] {
     background: #313131;
     border: 1px solid #525252;
@@ -1106,6 +1130,17 @@ input[type=submit] {
     border-radius: 4px;
     color: #b9b9b9;
     cursor: pointer;
+}
+
+.pdf-viewer {
+    position: absolute;
+    left: 0;
+    top: 15px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    max-height: none;
+    max-width: none;
 }
 
 input[type=submit]:hover {
